# Guarded-Self-Critiquing-RAG-System

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Combined_LLM_System_Roadmap.md  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  implementation_plan_v2.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  eval-gate.yml
data/: eval_config.yaml  golden_dataset.json  policies.yaml
data/documents/: .gitkeep
docs/: baseline_metrics.md  demo_scenarios.md
docs/learnings/: README.md
scripts/: .gitkeep  api_smoke_test.py  ingest.py  run_eval.py  run_sanity_check.py  test_graph_guards.py  test_presidio.py  trend.py
src/: __init__.py  config.py  telemetry.py
src/api/: app.py
src/dashboard/: app.py
src/eval/: dataset.py  metrics.py  reporter.py  runner.py  storage.py
src/guardrails/: __init__.py  input_guard.py  output_guard.py  policy_engine.py
src/rag/: __init__.py  critic.py  embedder.py  fallback.py  generator.py  graph.py  llm_provider.py  reformulator.py  retriever.py
tests/: conftest.py
tests/integration/: test_graph.py  test_graph_guards_integration.py
tests/unit/: test_critic.py  test_embedder.py  test_fallback.py  test_generator.py  test_input_guard.py  test_output_guard.py  test_policy_engine.py  test_reformulator.py  test_retriever.py
