[project]
name = "guarded-rag-system"
version = "0.1.0"
description = "A guarded, self-critiquing RAG system with automated evals — built with LangGraph, Groq, and ChromaDB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "costl" }
]

dependencies = [
    # Core RAG pipeline
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # Vector store
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.1.0",

    # Local embeddings (free, no API key needed)
    "sentence-transformers>=3.0.0",

    # Environment management
    "python-dotenv>=1.0.0",

    # Guardrails - PII detection
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Output validation
    "pydantic>=2.0.0",

    # Eval framework
    "ragas>=0.2.0",

    # Dashboard
    "streamlit>=1.35.0",

    # Utilities
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",

    # MLOps
    "wandb>=0.17.0",

    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Hugging Face ZeroGPU support
    "spaces>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]
ollama = [
    "langchain-ollama>=0.2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"scripts/**" = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
